--- a/style/main.scss
+++ b/style/main.scss
@@ -1,3 +1,7 @@
+@import '../style/reset.css';
+@import '../style/footer.scss';
+@import '../style/header.scss';
+
 h1 {
     font-family: 'Philosopher';
     font-style: normal;
